# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [1.8.1] unreleased
# Changed
- Do not display country if both client and company are Swiss.

## [1.8.0] 2023-07-06
# Added
- Client names can take 2 lines
- Default hourly rate and payment delay on company creation / update.
- Titles on company / invoice/ client pages
- Validation of all inputs in invoices to avoid user errors and offer immediate feedback

# Fixed
- Client list was not refreshed after client creation


## [1.7.1] 2023-07-03
# Fixed
- Could not save new invoice
- Total was not calculated correctly when adding a new invoice line
- Line removal always removed visually the last line of invoice
- Preview url is now loaded correctly when creating an invoice
- Link to client is now correct in invoices list


## [1.7.0] - 2023-06-06
# Added
- Helptexts wherever possible
- Button to create an invoice from the clients list

# Changed
- Simplified navigation if only one company
- Removed company name on clients lists if not relevant
- No more cache of older invoices
- Save of invoice is now done by hitting a button

# Fixed
- Missing translations in invoice edition
- Added remove company button in company edition
- Due date calculation more accurate


## [1.6.0] - 2023-06-01
# Added
- VAT can now be disabled


## [1.5.1]
# Changed
- Disable autocomplete on company search form
- Pep8 and pre-commit
- Remove IBAN from left column in invoices
- Pregenerate email signature

# Fixed
- Redirection upon login
- Company edition titles
- Saving of email and invoice fields on company edition


## [1.5.0] - 2023-05-16
# Changed
- Company creation using pure vue wizard.


## [1.4.1] - 2022-04-21
# Fixed
- New clients could not be saved
- Invoice CSRF token was not valid


## [1.4.0] - 2023-04-20
# Changed