@@ -1,25 +1,14 @@
 from django.contrib.auth.mixins import LoginRequiredMixin
 from django.shortcuts import get_object_or_404
 from django.urls import reverse_lazy
-from django.views.generic import CreateView, DeleteView, ListView, TemplateView, UpdateView
+from django.views.generic import DeleteView, ListView, TemplateView
 
-from ..forms import ClientForm
+from beyondtheadmin.dashboard.permissions import HasCompanyMixin
+
 from ..models import Client
 
 
-class ClientCreateView(LoginRequiredMixin, CreateView):
-    model = Client
-    form_class = ClientForm
-    success_url = reverse_lazy("clients:list")
-    template_name = "clients/create.html"
-
-    def get_form_kwargs(self):
-        kwargs = super().get_form_kwargs()
-        kwargs["user"] = self.request.user
-        return kwargs
-
-
-class ClientAppView(LoginRequiredMixin, TemplateView):
+class ClientAppView(LoginRequiredMixin, HasCompanyMixin, TemplateView):
     template_name = "clients_app/index.html"
 
     def get_context_data(self, **kwargs):
@@ -32,7 +21,7 @@ class ClientAppView(LoginRequiredMixin, TemplateView):
         return context
 
 
-class ClientDeleteView(LoginRequiredMixin, DeleteView):
+class ClientDeleteView(LoginRequiredMixin, HasCompanyMixin, DeleteView):
     model = Client
     success_url = reverse_lazy("clients:list")
     template_name = "clients/confirm_delete.html"
@@ -41,7 +30,7 @@ class ClientDeleteView(LoginRequiredMixin, DeleteView):
         return Client.objects.filter(company__users=self.request.user)
 
 
-class ClientListView(LoginRequiredMixin, ListView):
+class ClientListView(LoginRequiredMixin, HasCompanyMixin, ListView):
     model = Client
     template_name = "clients/list.html"
 
@@ -49,21 +38,6 @@ class ClientListView(LoginRequiredMixin, ListView):
         context = super().get_context_data(**kwargs)
         context["has_multiple_companies"] = self.request.user.companies.count() > 1
         return context
-
-    def get_queryset(self):
-        return Client.objects.filter(company__users=self.request.user)
-
-
-class ClientUpdateView(LoginRequiredMixin, UpdateView):
-    model = Client
-    form_class = ClientForm
-    success_url = reverse_lazy("clients:list")
-    template_name = "clients/update.html"
-
-    def get_form_kwargs(self):
-        kwargs = super().get_form_kwargs()
-        kwargs["user"] = self.request.user
-        return kwargs
 
     def get_queryset(self):
         return Client.objects.filter(company__users=self.request.user)
